--- a/pr3/download.html
+++ b/pr3/download.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      body {
-        background: rgb(55, 55, 55);
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
+    <title>Omnia Homepage</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Download</h1>
-    <a href="index.html"><button>Home</button></a>
-    <a href="download.html"><button>Download</button></a>
-    <a href="impressum.html"><button>Impressum</button></a>
-    <a href="kommentar.html"><button>Kommentar</button></a>
+    <header>
+      <nav>
+        <ul>
+          <li class="logo"><a href="index.html">Omni Logo</a></li>
+          <li><a href="download.html">Download</a></li>
+          <li><a href="kommentar.html">Kommentar</a></li>
+          <li><a href="impressum.html">Impressum</a></li>
+        </ul>
+      </nav>
+      <h1>Downloads</h1>
+    </header>
+    <section class="downloadTable">
+      <p>Aktuelle Versionen:<br /></p>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Version</th>
+          <th>Link</th>
+        </tr>
+        <tr>
+          <td>omni v0.5.6</td>
+          <td>Beta, Bug fixes</td>
+          <td><button>Download</button></td>
+        </tr>
+        <tr>
+          <td>omni v0.5.5</td>
+          <td>Beta, Bug fixes</td>
+          <td><button>Download</button></td>
+        </tr>
+        <tr>
+          <td>omni v0.5.4</td>
+          <td>Release Stable</td>
+          <td><button>Download</button></td>
+        </tr>
+      </table>
 
-    <p>Akturlle Versionen:<br></p>
-    <p><table>
-      <tr>
-        <th>Name</th>
-        <th>Version</th>
-        <th>Link</th>
-      </tr>
-      <tr>
-        <td>omni v0.5.6</td>
-        <td>Beta, Bug fixes</td>
-        <td><button>Download</button></td>
-      </tr>
-      <tr>
-        <td>omni v0.5.5</td>
-        <td>Beta, Bug fixes</td>
-        <td><button>Download</button></td>
-      </tr>
-      <tr>
-        <td>omni v0.5.4</td>
-        <td>Release Stable</td>
-        <td><button>Download</button></td>
-      </tr>
-    </table></p>
-
-    <p>Alte Versionen:<br></p>
-    <ul>
-      <li>omni 0.5.3</li>
-      <li>omni 0.5.2</li>
-      <li>omni 0.5.1</li>
-      <li>omni 0.5.0 alpha</li>
-    </ul>
+      <p>Alte Versionen:<br /></p>
+      <ul>
+        <li>omni 0.5.3</li>
+        <li>omni 0.5.2</li>
+        <li>omni 0.5.1</li>
+        <li>omni 0.5.0 alpha</li>
+      </ul>
+    </section>
+    <section>lower-section</section>
+    <footer>footer</footer>
   </body>
 </html>
