some changes on website

--- a/ownWebsite/index.html
+++ b/ownWebsite/index.html
@@ -3,24 +3,36 @@
   <head>
     <title>Omnia Homepage</title>
     <meta charset="utf-8" />
-    <style>
-      body {
-        background: rgb(55, 55, 55);
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Omnia</h1>
-    <h3>Your Gaming HUB for everything</h3>
-    <a href="index.html"><button>Home</button></a>
-    <a href="download.html"><button>Download</button></a>
-    <a href="impressum.html"><button>Impressum</button></a>
-    <p>
-      Omnia Ist ein Service der alle deine Gaming Launcher und freundeslisten
-      vereint.
-    </p>
-    <img src="bild url" alt="bild nicht gefunden" />
+    <header>
+      <nav>
+        <ul>
+          <li class="logo"><a href="index.html">Omni Logo</a></li>
+          <li><a href="download.html">Download</a></li>
+          <li><a href="kommentar.html">Kommentar</a></li>
+          <li><a href="impressum.html">Impressum</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="app">
+      <img src="bilder/app.png" alt="" />
+      <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+        voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+        amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+        nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+        rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+        ipsum dolor sit amet.
+      </p>
+    </section>
+
+    <section class="lower">lower-section</section>
+    <footer>footer</footer>
   </body>
 </html>
