--- a/ownWebsite/download.html
+++ b/ownWebsite/download.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Omni Homepage</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Download</h1>
-    <a href="index.html"><button>Home</button></a>
-    <a href="download.html"><button>Download</button></a>
-    <a href="impressum.html"><button>Impressum</button></a>
+    <header>
+      <nav>
+        <ul>
+          <li class="logo"><a href="index.html">Omni Logo</a></li>
+          <li><a href="download.html">Download</a></li>
+          <li><a href="kommentar.html">Kommentar</a></li>
+          <li><a href="impressum.html">Impressum</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="app">
+      <img src="bilder/app.png" alt="no pic found" />;
+    </section>
+    <section class="lower">
+      <li><img src="bilder/pcDowanload.png" alt="no picfound" /></li>
+      <li><img src="bilder/iosDowanload.png" alt="no picfound" /></li>
+      <li><img src="bilder/macDowanload.png" alt="no picfound" /></li>
+    </section>
+    <footer>footer</footer>
   </body>
 </html>
