--- a/ownWebsite/impressum.html
+++ b/ownWebsite/impressum.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Omnia Homepage</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Impressum</h1>
-    <a href="index.html"><button>Home</button></a>
-    <a href="download.html"><button>Download</button></a>
-    <a href="impressum.html"><button>Impressum</button></a>
+    <header>
+      <nav>
+        <ul>
+          <li class="logo"><a href="index.html">Omni Logo</a></li>
+          <li><a href="download.html">Download</a></li>
+          <li><a href="kommentar.html">Kommentar</a></li>
+          <li><a href="impressum.html">Impressum</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+      <img src="" alt="" />
+    </section>
+    <section>lower-section</section>
+    <footer>footer</footer>
   </body>
 </html>
